--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,8 @@
 ---
 layout: base
 ---
+This is the image in tabs, favicon
+<link rel="icon" type="image/jpg" href="img/sh_logo.jpg">
 
 <div class="intro-header"></div>
 
