--- a/_includes/head.html
+++ b/_includes/head.html
@@ -53,6 +53,9 @@
     {% endfor %}
   {% endif %}
 
+  <!-- Tab image / favicon control -->
+  <link rel="shortcut icon" type="image/jpg" href="img/sh_logo.jpg">
+
     <!-- Facebook OpenGraph tags -->
   {% if site.fb_app_id %}
   <meta property="fb:app_id" content="{{ site.fb_app_id }}" />
