--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,6 +13,10 @@
 
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }} {{ site.title-separator }} {{ site.description }}" href="{{ '/feed.xml' | absolute_url }}" />
 
+	{% if site.favicon %}
+    <link rel="icon" href="{{ site.favicon | prepend: site.baseurl | replace: '//', '/' }}" />
+	{% endif %}
+
   {% include gtag.html %}
   {% include gtm_head.html %}
   {% include google_analytics.html %}
@@ -52,9 +56,6 @@
       <link rel="stylesheet" href="//fonts.googleapis.com/css?family={{ font }}" />
     {% endfor %}
   {% endif %}
-
-  <!-- Tab image / favicon control -->
-  <link rel="shortcut icon" type="image/jpg" href="img/sh_logo.jpg">
 
     <!-- Facebook OpenGraph tags -->
   {% if site.fb_app_id %}
@@ -132,3 +133,6 @@
   {% endif %}
 
 </head>
+
+<!-- Tab image / favicon control -->
+<link rel="shortcut icon" type="image/jpg" href="/img/sh_logo.jpg">
